<package format="2">
  <name>mobileman_simulation</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for Assem_all_URDF</p>
    <p>This package contains configuration data, 3D models and launch files
for Assem_all_URDF robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_controller</depend>
  <!-- <depend>joint_effort_controller</depend> -->
  <depend>effort_controllers</depend>
  <!-- <depend>diff-drive-controller</depend> -->
  <!-- <depend>dwa-local-planner</depend> -->
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>